--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <section id="home" class="hero">
     <div class="container">
       <h2>Quality Auto Spares at Affordable Prices</h2>
-      <p>We provide genuine spare parts for all vehicle makes and models.</p>
+      <p>We provide genuine spare parts for Toyota vehicle makes and tractor plough parts/ bearings.</p>
       <a href="#services" class="btn">Explore Services</a>
     </div>
   </section>
@@ -39,7 +39,7 @@
   <section id="about" class="about">
     <div class="container">
       <h2>About Us</h2>
-      <p>Karanja Auto Spares has been serving the Narok Ololulunga community for over 10 years. We specialize in providing high-quality auto parts and exceptional customer service.</p>
+      <p>Karanja Auto Spares has been serving the Narok Ololulunga community for over 20 years. We specialize in providing high-quality auto parts and exceptional customer service.</p>
       <img src="assets/spare-parts.jpg" alt="Auto Spares">
     </div>
   </section>
@@ -51,7 +51,7 @@
       <div class="service-list">
         <div class="service-item">
           <h3>Genuine Spare Parts</h3>
-          <p>We offer authentic spare parts for all vehicle models.</p>
+          <p>We offer authentic spare parts for Toyota vehicle models.</p>
         </div>
         <div class="service-item">
           <h3>Vehicle Maintenance</h3>
@@ -77,7 +77,7 @@
       <address>
         Karanja Auto Spares<br>
         Narok Ololulunga, Kenya<br>
-        Phone: +254 712 345 678
+        Phone: +254 726 241 408
       </address>
       <img src="assets/location-map.jpg" alt="Location Map">
       <form id="contactForm">
